fix menu button overlap

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -78,5 +78,6 @@ body {
   }
   .nav.expanded .expander {
     bottom: auto;
+    left: auto;
   }
 }
